Updated Udoo folder

--- a/Udoo/CMakeLists.txt
+++ b/Udoo/CMakeLists.txt
@@ -4,6 +4,8 @@
 project (listener)
 cmake_minimum_required (VERSION 2.8.11)
 
+link_directories(/usr/local/lib)
+link_directories(${CMAKE_CURRENT_BINARY_DIR})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 set(CMAKE_BINARY_DIR ${PROJECT_BINARY_DIR}/bin)
 
@@ -11,12 +13,18 @@ set (CMAKE_EXE_LINKER_FLAGS)
 set (CMAKE_MODULE_LINKER_FLAGS)
 set (CMAKE_SHARED_LINKER_FLAGS)
 
-#find_library(lserial  lpthread PATHS /usr/local/lib)
+if(UNIX)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+endif()
+
+#add_library(libs STATIC /usr/local/lib/libserial/src/SerialStream.h)
+
+add_executable (listener listener.cpp serialPort.cpp serialPort.h packetIdentifier2.cpp packetIdentifier2.h checkPacket.cpp checkPacket.h checkSum.cpp checkSum.h savePacket.cpp savePacket.h timeOutput.cpp timeOutput.h AngleOutput.cpp AngleOutput.h wgdaytime.cpp wgdaytime.h)
+target_link_libraries(listener serial)
 
 
-add_executable (listener listener.cpp packetIdentifier2.cpp packetIdentifier2.h checkPacket.cpp checkPacket.h checkSum.cpp checkSum.h savePacket.cpp savePacket.h timeOutput.cpp timeOutput.h AngleOutput.cpp AngleOutput.h wgdaytime.cpp wgdaytime.h)
-
-target_link_libraries(listener ${libserial_LIBRARIES})
+#target_link_libraries(listener ${libserial_SRCS})
+#target_link_libraries(listener ${LIBS})
 
 option(VERBOSITY "Option description" ON)
 #option(WITH_FEATURE_B "Option description" OFF)
